Fixed overflow issue with safari and mobile

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
 .column {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .row {
