--- a/src/QuestionItemPlay/Question.css
+++ b/src/QuestionItemPlay/Question.css
@@ -14,6 +14,7 @@
   position: relative;
   padding: 0.5rem;
   /* color: red; */
+  z-index: 2;
   background-color: #282c34;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   border-radius: 2rem;
@@ -25,12 +26,13 @@
   width: 60vw;
   max-width: 500px;
   overflow: hidden;
+  display: inline-block;
 }
 
 .qAnswerPlayAnimate {
   content: "";
   position: absolute;
-  z-index: 10;
+  z-index: -1;
   transform: translateX(100%);
   top: 0;
   left: 0;
@@ -64,6 +66,7 @@
   height: fit-content;
   transition: 1s;
   align-items: center;
+  display: block;
 }
 
 .Back {
